fix bad overflow

--- a/src/bgpattern.css
+++ b/src/bgpattern.css
@@ -1,3 +1,8 @@
+.wrapper{
+    width: 100vw;
+    max-width: 100vw;
+    overflow: hidden;
+}
 .wrapper::before, .wrapper::after{
     content: "";
     position: absolute;
