--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
 }
 html,
 body {
+  width: 100vw;
   min-height: 100vh;
   overflow: hidden;
   scroll-behavior: smooth;
@@ -82,6 +83,10 @@ p,
 
 .section__head {
   font-weight: normal;
+}
+.card{
+  padding: 2rem;
+  margin-left: -2rem;
 }
 .card__title {
   font-size: 24px;
@@ -184,7 +189,6 @@ p,
   font-weight: 600;
   position: absolute;
   top: 25%;
-  left: -5%;
   z-index: -1;
   opacity: 0.2;
 }
@@ -326,8 +330,8 @@ form {
     position: absolute;
     top: 0;
     background-color: var(--color-light);
-    width: 100vw;
-    height: 80vh;
+    width: 76vw;
+    height: 90vh;
     margin-top: -6rem;
     margin-left: -18rem;
     border-radius: var(--border-radius);
